feat: add project 5

--- a/project#5/package.json
+++ b/project#5/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "homework-2",
+  "name": "july-17-activity",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,8 +13,8 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "redux": "^4.1.1",
     "uuid": "^8.3.2",
+    "uuidv4": "^6.2.12",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
